# clings

./: .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  check-all.sh  findings.md  progress.md  task_plan.md
.github/workflows/: ci.yml
assets/: test.h
exercises/: annales_map.json
exercises/bitwise_ops/: bit_count_01.json  bit_count_01.toml  bit_crc_01.json  bit_crc_01.toml  bit_crypto_01.json  bit_crypto_01.toml  bit_field_01.json  bit_field_01.toml  bit_mask_apply_01.json  bit_mask_apply_01.toml  bit_perm_01.json  bit_perm_01.toml  bit_reverse_01.json  bit_reverse_01.toml  bit_shift_01.json  bit_shift_01.toml  bit_toggle_01.json  bit_toggle_01.toml  bitmask_flags_01.json  bitmask_flags_01.toml  bitwise_ops_01.json  bitwise_ops_01.toml  concept.md  popcount_01.json  popcount_01.toml
exercises/capstones/: capstone_allocator_01.json  capstone_allocator_01.toml  capstone_chat_01.json  capstone_chat_01.toml  capstone_chat_02.json  capstone_chat_02.toml  capstone_chat_03.json  capstone_chat_03.toml  capstone_daemon_01.json  capstone_daemon_01.toml  capstone_prodcons_01.json  capstone_prodcons_01.toml  capstone_prodcons_02.json  capstone_prodcons_02.toml  capstone_proxy_01.json  capstone_proxy_01.toml  capstone_shell_01.json  capstone_shell_01.toml  capstone_shell_02.json  capstone_shell_02.toml  capstone_shell_03.json  capstone_shell_03.toml  capstone_strace_01.json  capstone_strace_01.toml
exercises/errno/: errno_basic_01.json  errno_basic_01.toml  errno_catalog_01.json  errno_catalog_01.toml  errno_check_01.json  errno_check_01.toml  errno_custom_01.json  errno_custom_01.toml  errno_eintr_01.json  errno_eintr_01.toml  errno_enoent_01.json  errno_enoent_01.toml  errno_eperm_01.json  errno_eperm_01.toml  errno_recovery_01.json  errno_recovery_01.toml  errno_robust_01.json  errno_robust_01.toml  errno_strerror_01.json  errno_strerror_01.toml  errno_thread_01.json  errno_thread_01.toml  errno_wrapper_01.json  errno_wrapper_01.toml
exercises/fd_basics/: fd_create_01.json  fd_create_01.toml  fd_devnull_01.json  fd_devnull_01.toml  fd_dup_01.json  fd_dup_01.toml  fd_epoll_01.json  fd_epoll_01.toml  fd_fcntl_01.json  fd_fcntl_01.toml  fd_open_01.json  fd_open_01.toml  fd_passfd_01.json  fd_passfd_01.toml  fd_pipe_redir_01.json  fd_pipe_redir_01.toml  fd_poll_01.json  fd_poll_01.toml  fd_read_01.json  fd_read_01.toml  fd_redirect_01.json  fd_redirect_01.toml  fd_table_01.json  fd_table_01.toml
exercises/file_io/: concept.md  file_aio_01.json  file_aio_01.toml  file_binary_01.json  file_binary_01.toml  file_csv_parse_01.json  file_csv_parse_01.toml  file_getline_01.json  file_getline_01.toml  file_lock_01.json  file_lock_01.toml  file_mmap_01.json  file_mmap_01.toml  file_open_modes_01.json  file_open_modes_01.toml  file_read_lines_01.json  file_read_lines_01.toml  (+10 more)
scripts/: audit_compile.py  audit_curriculum.py  audit_schema.py  clings-sync  fix_starter_code_main.py  migrate_to_output.py
src/: authoring.rs  chapters.rs  config.rs  constants.rs  display.rs  error.rs  exam.rs  exercises.rs  lib.rs  libsys.rs  main.rs  mastery.rs  models.rs  piscine.rs  progress.rs  reporting.rs  runner.rs  search.rs  sync.rs  tmux.rs  watcher.rs
tests/: integration_exercises.rs  integration_progress.rs  proptest_mastery.rs  snapshot_tui.rs
tools/: migrate_exercises.rs
(+571 files in other folders)
