[package]
name = "clings"
version = "2.5.0"
edition = "2021"
description = "NSY103 C systems programming trainer — rustlings-style TUI"
license = "MIT"
repository = "https://github.com/trollheap/clings"
keywords = ["linux", "systems-programming", "nsy103", "tui", "c"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "clings"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
notify = "8"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
colored = "3"
libc = "0.2"
ctrlc = "3"
thiserror = "2"
regex = "1"
toml = "0.8"

[profile.release]
lto = "thin"          # Link-time optimization (thin = bon compromis vitesse/taille)
codegen-units = 1     # Meilleure optimisation (compile plus lent, exécutable plus rapide)
strip = "symbols"     # Supprime les symboles debug (~30% plus petit)
